# ZabbixTrapperNDK

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/zabbixtrapperndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  zabbixnativecontroller.cpp  zabbixtrapper.cpp  zabbixtrapperndk.cpp
app/src/main/include/: zabbixtrapper.h
app/src/main/java/com/example/zabbixtrapperndk/: MainActivity.kt  NativeTrapper.kt  SenderView.kt
app/src/main/jniLibs/arm64-v8a/shared/cmake/boost_atomic-1.83.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake
app/src/main/jniLibs/arm64-v8a/shared/cmake/boost_chrono-1.83.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake
app/src/main/jniLibs/arm64-v8a/shared/cmake/boost_container-1.83.0/: boost_container-config.cmake  libboost_container-variant-shared.cmake
app/src/main/jniLibs/arm64-v8a/shared/cmake/boost_context-1.83.0/: boost_context-config.cmake  libboost_context-variant-shared.cmake
app/src/main/jniLibs/arm64-v8a/shared/cmake/boost_contract-1.83.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake
app/src/main/jniLibs/arm64-v8a/shared/cmake/boost_coroutine-1.83.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake
app/src/main/jniLibs/arm64-v8a/shared/cmake/boost_fiber-1.83.0/: boost_fiber-config.cmake  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/zabbixtrapperndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+302 files in other folders)
